[project]
name = "joppylib-notebook"
version = "0.1.0"
description = "A Jupyter Lab interface for JopPyLib"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "catppuccin-jupyterlab>=0.2.4",
    "joppylib>=0.1.0a12",
    "jupyterlab>=4.4.5",
    "jupyterlab-vim>=4.1.4",
    "requests>=2.32.4",
    "rich[jupyter]>=14.1.0",
]
